# e2e-qa-4j

./: README.md  pom.xml
selenium-trunk/: .bazelrc  .bazelrc.remote  .skipped-tests  AUTHORS  CONTRIBUTING.md  MODULE.bazel  README.md  Rakefile  multitool.lock.json  pnpm-lock.yaml
selenium-trunk/.github/: label-commenter-config.yml  renovate.json
selenium-trunk/.github/ISSUE_TEMPLATE/: bug-report.yml
selenium-trunk/.github/workflows/: bazel.yml  ci-java.yml  ci-python.yml  ci-rbe.yml  ci-ruby.yml  ci.yml  mirror-selenium-releases.yml  stage-release.yml  update-documentation.yml
selenium-trunk/dotnet/: BUILD.bazel  CHANGELOG  defs.bzl  paket.dependencies  paket.nuget.bzl  selenium-dotnet-version.bzl
selenium-trunk/dotnet/private/: BUILD.bazel  generate_resources.bzl  generate_resources_tool.py  nuget_package.bzl  nunit_test.bzl
selenium-trunk/dotnet/src/support/: BUILD.bazel  Selenium.WebDriver.Support.csproj
selenium-trunk/dotnet/src/support/Events/: EventFiringWebDriver.cs  WebDriverScriptEventArgs.cs
selenium-trunk/dotnet/src/support/Extensions/: WebDriverExtensions.cs
selenium-trunk/dotnet/src/webdriver/: BUILD.bazel  DriverProcessStartedEventArgs.cs  DriverService.cs  IJavaScriptEngine.cs  IJavascriptExecutor.cs  InitializationScript.cs  InvalidSelectorException.cs  JavaScriptEngine.cs  NoSuchElementException.cs  PinnedScript.cs  Proxy.cs  RelativeBy.cs  Selenium.WebDriver.StrongNamed.nuspec  Selenium.WebDriver.csproj  Selenium.WebDriver.nuspec  SeleniumManager.cs  StaleElementReferenceException.cs  WebDriver.cs  WebElement.cs
selenium-trunk/dotnet/src/webdriver/BiDi/: BiDi.cs  Broker.cs  Command.cs  CommandOptions.cs  EventHandler.cs  ITransport.cs  Module.cs  Subscription.cs  WebDriver.Extensions.cs  WebSocketTransport.cs
selenium-trunk/dotnet/src/webdriver/BiDi/Browser/: BrowserModule.cs  ClientWindow.cs  ClientWindowInfo.cs  CloseCommand.cs  CreateUserContextCommand.cs  GetClientWindowsCommand.cs  GetUserContextsCommand.cs  RemoveUserContextCommand.cs  SetDownloadBehaviorCommand.cs  UserContextInfo.cs
selenium-trunk/dotnet/src/webdriver/BiDi/BrowsingContext/: ActivateCommand.cs  BrowsingContext.cs  BrowsingContextInfo.cs  BrowsingContextInputModule.cs  BrowsingContextLogModule.cs  BrowsingContextModule.cs  BrowsingContextNetworkModule.cs  BrowsingContextScriptModule.cs  CaptureScreenshotCommand.cs  CloseCommand.cs  CreateCommand.cs  DownloadEndEventArgs.cs  DownloadWillBeginEventArgs.cs  GetTreeCommand.cs  HandleUserPromptCommand.cs  IBaseNavigationInfo.cs  LocateNodesCommand.cs  Locator.cs  NavigateCommand.cs  Navigation.cs  NavigationInfo.cs  PrintCommand.cs  ReloadCommand.cs  SetViewportCommand.cs  TraverseHistoryCommand.cs  UserPromptClosedEventArgs.cs  UserPromptOpenedEventArgs.cs
selenium-trunk/dotnet/src/webdriver/BiDi/Emulation/: EmulationModule.cs  SetForcedColorsModeThemeOverrideCommand.cs  SetGeolocationOverrideCommand.cs  SetLocaleOverrideCommand.cs  SetScreenOrientationOverrideCommand.cs  SetScriptingEnabledCommand.cs  SetTimezoneOverrideCommand.cs  SetUserAgentOverrideCommand.cs
selenium-trunk/dotnet/src/webdriver/BiDi/Input/: InputModule.cs  Origin.cs  SetFilesCommand.cs  (+3 more)
selenium-trunk/dotnet/src/webdriver/Chromium/: ChromiumDriverService.cs
selenium-trunk/dotnet/src/webdriver/DevTools/: DevToolsDomains.cs  JavaScript.cs
selenium-trunk/dotnet/src/webdriver/Firefox/: FirefoxDriverService.cs  FirefoxExtension.cs  FirefoxProfile.cs
selenium-trunk/dotnet/src/webdriver/Internal/: FileUtilities.cs  PortUtilities.cs  ResourceUtilities.cs  StringSyntaxAttribute.cs  StringSyntaxConstants.cs
selenium-trunk/dotnet/src/webdriver/Safari/: SafariDriverService.cs
selenium-trunk/dotnet/test/common/: BUILD.bazel  ProxyTest.cs  RelativeLocatorTest.cs  Selenium.WebDriver.Common.Tests.csproj
selenium-trunk/dotnet/test/common/BiDi/: BiDiFixture.cs
selenium-trunk/dotnet/test/common/CustomDriverConfigs/: StableChannelChromeDriver.cs
selenium-trunk/dotnet/test/common/DevTools/: DevToolsConsoleTest.cs  DevToolsLogTest.cs  DevToolsNetworkTest.cs  DevToolsPerformanceTest.cs  DevToolsProfilerTest.cs  DevToolsSecurityTest.cs  DevToolsTabsTest.cs  DevToolsTargetTest.cs
selenium-trunk/dotnet/test/common/Environment/: DriverConfig.cs  EnvironmentManager.cs  TestEnvironment.cs  TestWebServerConfig.cs  UrlBuilder.cs  WebsiteConfig.cs
selenium-trunk/dotnet/test/firefox/: BUILD.bazel  FirefoxDriverServiceTest.cs
selenium-trunk/dotnet/test/support/Events/: BUILD.bazel
selenium-trunk/dotnet/test/support/Extensions/: BUILD.bazel
selenium-trunk/dotnet/test/support/UI/: BUILD.bazel
selenium-trunk/javascript/atoms/: dom.js
selenium-trunk/javascript/atoms/test/: shown_test.html  text_test.html
selenium-trunk/javascript/grid-ui/: package.json
selenium-trunk/javascript/grid-ui/src/: index.tsx
selenium-trunk/javascript/grid-ui/src/contexts/: ThemeContext.tsx
selenium-trunk/javascript/grid-ui/src/theme/: theme.tsx  themes.tsx
selenium-trunk/javascript/selenium-webdriver/: BUILD.bazel  CHANGES.md  package.json
selenium-trunk/javascript/selenium-webdriver/test/bidi/: network_test.js
selenium-trunk/javascript/selenium-webdriver/test/fedcm/: fedcm_test.js
selenium-trunk/py/: BUILD.bazel  conftest.py  generate.py  generate_api_module_listing.py  pyproject.toml  requirements.txt  requirements_lock.txt  tox.ini
selenium-trunk/py/docs/: requirements.txt
selenium-trunk/py/docs/source/: api.rst  conf.py
selenium-trunk/py/private/: browsers.bzl
selenium-trunk/py/selenium/: __init__.py
selenium-trunk/py/selenium/webdriver/: __init__.py
selenium-trunk/py/selenium/webdriver/firefox/: options.py
selenium-trunk/rb/: .rubocop.yml  Steepfile
selenium-trunk/rb/lib/selenium/devtools/: BUILD.bazel  version.rb
selenium-trunk/rb/lib/selenium/webdriver/: version.rb
selenium-trunk/rb/spec/: BUILD.bazel  tests.bzl
selenium-trunk/rust/: BUILD.bazel  CHANGELOG.md  Cargo.toml
selenium-trunk/rust/private/: rustfmt_wrapper.bzl
selenium-trunk/rust/tests/: BUILD.bazel  browser_download_tests.rs  browser_tests.rs  common.rs  output_tests.rs
(+267 files in other folders)
