load("//dotnet:defs.bzl", "dotnet_nunit_test_suite", "nuget_package")

dotnet_nunit_test_suite(
    name = "SmallTests",
    size = "small",
    srcs = glob(["*.cs"]),
    target_frameworks = ["net8.0"],
    deps = [
        "//dotnet/src/support",
        "//dotnet/src/webdriver:webdriver-net8.0",
        "//dotnet/test/common:fixtures",
        nuget_package("Moq"),
        nuget_package("NUnit"),
    ],
)
